[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sounds/Music/Music Title.ogg" type="AudioStream" id=1]
[ext_resource path="res://Sounds/Music/Bad End.ogg" type="AudioStream" id=2]
[ext_resource path="res://Sounds/Music/Good End.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scripts/Persistente.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.219608, 0.827451, 0.533333, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.639216, 0.243137, 0.807843, 1 )

[node name="Persistente" type="Node"]
script = ExtResource( 4 )

[node name="MusicTitle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="MusicBadFinal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="MusicGoodFinal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.294118, 0.372549, 0.819608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress" type="ProgressBar" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -25.0
margin_right = 375.0
margin_bottom = 25.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
